Fixes dropdown alignment (and styling in Safari)

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -1432,7 +1432,7 @@ transition : height 0.25s ease opacity 0.2s linear;
      padding: 10px;
      white-space: nowrap;
      padding-top: 3px;
-     text-shadow: 1px  1px 1px #2c3e50, 
+     text-shadow: 1px  1px 1px #2c3e50,
                  -1px  1px 1px #2c3e50,
                   1px -1px 1px #2c3e50,
                  -1px -1px 1px #2c3e50;
@@ -1931,8 +1931,8 @@ hr.ac-table-header {
   float: initial;
 }
 
-.secondary-nav {
-    text-align: right;
+.navbar ul.dropdown-menu {
+  transform: translateZ(801px);
 }
 
 .tab-pane>.row>.col {
